# libltdl

./: .travis.yml  LICENSE  README.md  Setup.hs  aclocal.m4  configure  configure.ac  libltdl.buildinfo.in  libltdl.cabal
.github/workflows/: haskell-ci.yml
Foreign/: LibLTDL.hs
Foreign/LibLTDL/: Internal.hsc
examples/sin/: Main.hs
